Ajout système de vérification par email avec lien de confirmation

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
 PORT=3000
 MONGODB_URI=mongodb+srv://votre_utilisateur:votre_mot_de_passe@cluster.mongodb.net/jeu_bleu_rouge
 JWT_SECRET=votre_secret_jwt_super_securise_changez_moi
+
+# Configuration Email (pour envoi de confirmations)
+EMAIL_SERVICE=gmail
+EMAIL_USER=votre_email@gmail.com
+EMAIL_PASSWORD=votre_mot_de_passe_application
+APP_URL=https://votre-app.onrender.com
+
+# Alternative SMTP personnalisé
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+
