--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.19.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
+    "nodemailer": "^7.0.13",
     "socket.io": "^4.6.1",
     "uuid": "^9.0.0"
   },
