✨ Configuration UTF-8 complète + Production Render uniquement - Suppression de toutes les URLs localhost

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ JWT_SECRET=votre_secret_jwt_super_securise_changez_moi
 EMAIL_SERVICE=gmail
 EMAIL_USER=votre_email@gmail.com
 EMAIL_PASSWORD=votre_mot_de_passe_application
-APP_URL=https://votre-app.onrender.com
+APP_URL=https://jeu-bleu-rouge.onrender.com
 
 # Alternative SMTP personnalisé
 # SMTP_HOST=smtp.gmail.com
