🔒 Sécurité renforcée: helmet, rate-limiting, validation, CORS strict, JWT obligatoire

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,20 @@
 PORT=3000
-MONGODB_URI=mongodb+srv://votre_utilisateur:votre_mot_de_passe@cluster.mongodb.net/jeu_bleu_rouge
-JWT_SECRET=votre_secret_jwt_super_securise_changez_moi
 
-# Configuration Email (pour envoi de confirmations)
+# ⚠️ OBLIGATOIRE EN PRODUCTION - Générer avec:
+# node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+JWT_SECRET=CHANGEZ_MOI_EN_PRODUCTION_64_CARACTERES_ALEATOIRES_MINIMUM
+
+# MongoDB Atlas (recommandé) - NE JAMAIS COMMITER LA VRAIE URI!
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/jeu_bleu_rouge?retryWrites=true&w=majority
+
+# URL de l'application (adapter selon l'environnement)
+APP_URL=https://jeu-bleu-rouge.onrender.com
+
+# Configuration Email (optionnel - pour vérification email)
 EMAIL_SERVICE=gmail
 EMAIL_USER=votre_email@gmail.com
-EMAIL_PASSWORD=votre_mot_de_passe_application
-APP_URL=https://jeu-bleu-rouge.onrender.com
+# Utiliser un "App Password" Gmail, pas le mot de passe principal
+EMAIL_PASSWORD=mot_de_passe_application_gmail
 
 # Alternative SMTP personnalisé
 # SMTP_HOST=smtp.gmail.com
