--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,52 @@
-node_modules/
-*.log
-.DS_Store
-server.pfx
-*.pfx
+# ========================================
+# SÉCURITÉ - Fichiers sensibles CRITIQUES
+# ========================================
 .env
+.env.*
+!.env.example
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
+server.pfx
+config/secrets*
+credentials/
+secrets/
+
+# ========================================
+# Node.js
+# ========================================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+
+# ========================================
+# Logs
+# ========================================
+*.log
+logs/
+.npm
+
+# ========================================
+# Build et cache
+# ========================================
+dist/
+build/
+.cache/
+.parcel-cache/
+.vscode/
+.idea/
+
+# ========================================
+# Système
+# ========================================
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+*.tmp
+*.backup
+
