--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "dev:utf8": "chcp 65001 && nodemon server.js",
-    "start:utf8": "chcp 65001 && node server.js"
+    "start:utf8": "chcp 65001 && node server.js",
+    "build": "cd client && npm install && npm run build",
+    "deploy": "npm run build && git add -A && git commit -m 'Build client' && git push"
   },
   "keywords": [
     "socket.io",
