--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "nodemailer": "^7.0.13",
+    "resend": "^6.9.2",
     "socket.io": "^4.6.1",
     "uuid": "^9.0.0"
   },
